--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://fiza2001.github.io/codoid-assesment",
+  "homepage": "https://fiza2001.github.io/codoid-assesment/",
   "name": "travel-blog",
   "version": "0.1.0",
   "private": true,
