--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://fiza2001.github.io/codoid-assesment/",
   "name": "travel-blog",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
